0.2.4   xx-xxx-2009
  o Apply an application-global stylesheet on OS X that forces all tree
    widgets in Vidalia to use the 12pt font recommended by Apple's human
    interface guidelines.


0.2.3   27-Aug-2009
  o Create the data directory before trying to copy over the default
    Vidalia configuration file from inside the application bundle on Mac 
    OS X. Affects only OS X drag-and-drop installer users without a
    previous Vidalia installation.
  o Change all Tor event handling to use Qt's signals and slots mechanism
    instead of custom QEvent subclasses.
  o Fix another bug that resulted in the "Who has used my bridge?" link
    initially being visible when the user clicks "Setup Relaying" from
    the control panel if they are running a non-bridge relay.
    (Ticket #509, reported by "vrapp")
  o Always hide the "Who has used my bridge?" link when Tor isn't running,
    since clicking it won't return useful information until Tor actually
    is running.


0.2.2   14-Aug-2009
  o When the user clicks "Browse" in the Advanced settings page to locate
    a new torrc, set the initial directory shown in the file dialog to the
    current location of the user's torrc. (Ticket #505)
  o Use 'ditto' to strip the architectures we don't want from the Qt
    frameworks installed into the app bundle with the dist-osx,
    dist-osx-bundle and dist-osx-split-bundle build targets.
  o Fix a bug in the CMakeLists.txt files for ts2po and po2ts that caused
    build errors on Panther for those two tools.
  o Include rebuilt OpenSSL libraries in the Windows packages that are
    built with the static (/MT) version of the Microsoft Visual C++
    Runtime. Otherwise, we would require users to install the MSVC
    Redistributable, which doesn't work for portable installations such as
    the Tor Browser Bundle.
  o Remove the NSIS file for the Vidalia installer since we now ship
    MSI-based installers on Windows.


0.2.1   03-Aug-2009