@@ -73,6 +73,13 @@ if (APPLE)
     set(CMAKE_OSX_SYSROOT "/Developer/SDKs/MacOSX10.4u.sdk"
         CACHE STRING "isysroot used for universal binary support" FORCE)
   endif(OSX_FAT_BINARY)
+
+  option(OSX_FORCE_32BIT "Force a 32-bit build for compatibility." OFF)
+  if (OSX_FORCE_32BIT)
+    add_definitions(-m32)
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -m32" 
+        CACHE STRING "Flags used by the linker." FORCE)
+  endif(OSX_FORCE_32BIT)
 endif(APPLE)
 
 ## UPnP support is currently optional (enabled by default)
